--- a/index.html
+++ b/index.html
@@ -1,220 +1,23 @@
-return an empty string
-
-    should return an empty string
-    ‣
-
-    AssertionError: expected undefined to equal ''AssertionError@https://unpkg.com/chai/chai.js:9574:13
-    [3]</module.exports/Assertion.prototype.assert@https://unpkg.com/chai/chai.js:250:13
-    assertEqual@https://unpkg.com/chai/chai.js:1409:12
-    methodWrapper@https://unpkg.com/chai/chai.js:7884:25
-    @file:///Users/santino/Downloads/intro-day-1-in-class/test.js:5:36
-
-return a number zero
-
-    should return a number zero
-    ‣
-
-    AssertionError: expected undefined to equal 0AssertionError@https://unpkg.com/chai/chai.js:9574:13
-    [3]</module.exports/Assertion.prototype.assert@https://unpkg.com/chai/chai.js:250:13
-    assertEqual@https://unpkg.com/chai/chai.js:1409:12
-    methodWrapper@https://unpkg.com/chai/chai.js:7884:25
-    @file:///Users/santino/Downloads/intro-day-1-in-class/test.js:11:35
-
-return an empty array
-
-    should return an empty array
-    ‣
-
-    AssertionError: expected undefined to be an instance of ArrayAssertionError@https://unpkg.com/chai/chai.js:9574:13
-    [3]</module.exports/Assertion.prototype.assert@https://unpkg.com/chai/chai.js:250:13
-    assertInstanceOf@https://unpkg.com/chai/chai.js:2065:10
-    methodWrapper@https://unpkg.com/chai/chai.js:7884:25
-    @file:///Users/santino/Downloads/intro-day-1-in-class/test.js:17:41
-
-return an empty object
-
-    should return an empty object
-    ‣
-
-    AssertionError: expected undefined to be an instance of ObjectAssertionError@https://unpkg.com/chai/chai.js:9574:13
-    [3]</module.exports/Assertion.prototype.assert@https://unpkg.com/chai/chai.js:250:13
-    assertInstanceOf@https://unpkg.com/chai/chai.js:2065:10
-    methodWrapper@https://unpkg.com/chai/chai.js:7884:25
-    @file:///Users/santino/Downloads/intro-day-1-in-class/test.js:23:42
-
-return a abc123 String
-
-    should return an empty string
-    ‣
-
-    AssertionError: expected undefined to equal 'abc123'AssertionError@https://unpkg.com/chai/chai.js:9574:13
-    [3]</module.exports/Assertion.prototype.assert@https://unpkg.com/chai/chai.js:250:13
-    assertEqual@https://unpkg.com/chai/chai.js:1409:12
-    methodWrapper@https://unpkg.com/chai/chai.js:7884:25
-    @file:///Users/santino/Downloads/intro-day-1-in-class/test.js:29:42
-
-return sum of two parameters
-
-    should return 10
-    ‣
-
-    AssertionError: expected undefined to equal 10AssertionError@https://unpkg.com/chai/chai.js:9574:13
-    [3]</module.exports/Assertion.prototype.assert@https://unpkg.com/chai/chai.js:250:13
-    assertEqual@https://unpkg.com/chai/chai.js:1409:12
-    methodWrapper@https://unpkg.com/chai/chai.js:7884:25
-    @file:///Users/santino/Downloads/intro-day-1-in-class/test.js:35:37
-
-return subtraction of two parameters
-
-    should return 0
-    ‣
-
-    AssertionError: expected undefined to equal 0AssertionError@https://unpkg.com/chai/chai.js:9574:13
-    [3]</module.exports/Assertion.prototype.assert@https://unpkg.com/chai/chai.js:250:13
-    assertEqual@https://unpkg.com/chai/chai.js:1409:12
-    methodWrapper@https://unpkg.com/chai/chai.js:7884:25
-    @file:///Users/santino/Downloads/intro-day-1-in-class/test.js:41:34
-
-return multiply of two parameters
-
-    should return 20
-    ‣
-
-    AssertionError: expected undefined to equal 20AssertionError@https://unpkg.com/chai/chai.js:9574:13
-    [3]</module.exports/Assertion.prototype.assert@https://unpkg.com/chai/chai.js:250:13
-    assertEqual@https://unpkg.com/chai/chai.js:1409:12
-    methodWrapper@https://unpkg.com/chai/chai.js:7884:25
-    @file:///Users/santino/Downloads/intro-day-1-in-class/test.js:47:37
-
-return division of two parameters
-
-    should return 5
-    ‣
-
-    AssertionError: expected undefined to equal 5AssertionError@https://unpkg.com/chai/chai.js:9574:13
-    [3]</module.exports/Assertion.prototype.assert@https://unpkg.com/chai/chai.js:250:13
-    assertEqual@https://unpkg.com/chai/chai.js:1409:12
-    methodWrapper@https://unpkg.com/chai/chai.js:7884:25
-    @file:///Users/santino/Downloads/intro-day-1-in-class/test.js:53:32
-
-return an array with value inside
-
-    should return [1,2,3]
-    ‣
-
-    AssertionError: expected undefined to deeply equal [ 1, 2, 3 ]AssertionError@https://unpkg.com/chai/chai.js:9574:13
-    [3]</module.exports/Assertion.prototype.assert@https://unpkg.com/chai/chai.js:250:13
-    assertEql@https://unpkg.com/chai/chai.js:1467:10
-    methodWrapper@https://unpkg.com/chai/chai.js:7884:25
-    @file:///Users/santino/Downloads/intro-day-1-in-class/test.js:59:39
-
-return an array first index of the array element - [1,2,3]
-
-    should return 1
-    ‣
-
-    AssertionError: expected undefined to equal 1AssertionError@https://unpkg.com/chai/chai.js:9574:13
-    [3]</module.exports/Assertion.prototype.assert@https://unpkg.com/chai/chai.js:250:13
-    assertEqual@https://unpkg.com/chai/chai.js:1409:12
-    methodWrapper@https://unpkg.com/chai/chai.js:7884:25
-    @file:///Users/santino/Downloads/intro-day-1-in-class/test.js:65:44
-
-return an array second index of the array element - [1,2,3]
-
-    should return 2
-    ‣
-
-    AssertionError: expected undefined to equal 2AssertionError@https://unpkg.com/chai/chai.js:9574:13
-    [3]</module.exports/Assertion.prototype.assert@https://unpkg.com/chai/chai.js:250:13
-    assertEqual@https://unpkg.com/chai/chai.js:1409:12
-    methodWrapper@https://unpkg.com/chai/chai.js:7884:25
-    @file:///Users/santino/Downloads/intro-day-1-in-class/test.js:71:45
-
-return the length of an array - [1,2,3]
-
-    should return 3
-    ‣
-
-    AssertionError: expected undefined to equal 3AssertionError@https://unpkg.com/chai/chai.js:9574:13
-    [3]</module.exports/Assertion.prototype.assert@https://unpkg.com/chai/chai.js:250:13
-    assertEqual@https://unpkg.com/chai/chai.js:1409:12
-    methodWrapper@https://unpkg.com/chai/chai.js:7884:25
-    @file:///Users/santino/Downloads/intro-day-1-in-class/test.js:77:45
-
-return the sum of an array
-
-    should return 6
-    ‣
-
-    AssertionError: expected undefined to equal 6AssertionError@https://unpkg.com/chai/chai.js:9574:13
-    [3]</module.exports/Assertion.prototype.assert@https://unpkg.com/chai/chai.js:250:13
-    assertEqual@https://unpkg.com/chai/chai.js:1409:12
-    methodWrapper@https://unpkg.com/chai/chai.js:7884:25
-    @file:///Users/santino/Downloads/intro-day-1-in-class/test.js:83:36
-
-return the subtraction of an array
-
-    should return -6
-    ‣
-
-    AssertionError: expected undefined to equal -6AssertionError@https://unpkg.com/chai/chai.js:9574:13
-    [3]</module.exports/Assertion.prototype.assert@https://unpkg.com/chai/chai.js:250:13
-    assertEqual@https://unpkg.com/chai/chai.js:1409:12
-    methodWrapper@https://unpkg.com/chai/chai.js:7884:25
-    @file:///Users/santino/Downloads/intro-day-1-in-class/test.js:89:44
-
-return the multiplication of an array
-
-    should return 6
-    ‣
-
-    AssertionError: expected undefined to equal 6AssertionError@https://unpkg.com/chai/chai.js:9574:13
-    [3]</module.exports/Assertion.prototype.assert@https://unpkg.com/chai/chai.js:250:13
-    assertEqual@https://unpkg.com/chai/chai.js:1409:12
-    methodWrapper@https://unpkg.com/chai/chai.js:7884:25
-    @file:///Users/santino/Downloads/intro-day-1-in-class/test.js:95:47
-
-return the division of an array NOTE: Round the decimal place to third - USE GOOGLE
-
-    should return 0.166
-    ‣
-
-    AssertionError: expected undefined to equal 0.167AssertionError@https://unpkg.com/chai/chai.js:9574:13
-    [3]</module.exports/Assertion.prototype.assert@https://unpkg.com/chai/chai.js:250:13
-    assertEqual@https://unpkg.com/chai/chai.js:1409:12
-    methodWrapper@https://unpkg.com/chai/chai.js:7884:25
-    @file:///Users/santino/Downloads/intro-day-1-in-class/test.js:101:41
-
-return only odds number
-
-    should return [1,3,5]
-    ‣
-
-    AssertionError: expected undefined to deeply equal [ 1, 3, 5 ]AssertionError@https://unpkg.com/chai/chai.js:9574:13
-    [3]</module.exports/Assertion.prototype.assert@https://unpkg.com/chai/chai.js:250:13
-    assertEql@https://unpkg.com/chai/chai.js:1467:10
-    methodWrapper@https://unpkg.com/chai/chai.js:7884:25
-    @file:///Users/santino/Downloads/intro-day-1-in-class/test.js:107:42
-
-return only even
-
-    should return [2,4,6]
-    ‣
-
-    AssertionError: expected undefined to deeply equal [ 2, 4, 6 ]AssertionError@https://unpkg.com/chai/chai.js:9574:13
-    [3]</module.exports/Assertion.prototype.assert@https://unpkg.com/chai/chai.js:250:13
-    assertEql@https://unpkg.com/chai/chai.js:1467:10
-    methodWrapper@https://unpkg.com/chai/chai.js:7884:25
-    @file:///Users/santino/Downloads/intro-day-1-in-class/test.js:113:46
-
-Find the right fruits
-
-    should return [apple, orange]
-    ‣
-
-    AssertionError: expected undefined to deeply equal [ 'apple', 'orange' ]AssertionError@https://unpkg.com/chai/chai.js:9574:13
-    [3]</module.exports/Assertion.prototype.assert@https://unpkg.com/chai/chai.js:250:13
-    assertEql@https://unpkg.com/chai/chai.js:1467:10
-    methodWrapper@https://unpkg.com/chai/chai.js:7884:25
-    @file:///Users/santino/Downloads/intro-day-1-in-class/test.js:119:73
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <title>Mocha Tests</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://unpkg.com/mocha/mocha.css" />
+</head>
+<body>
+  <div id="mocha"></div>
+  <script src="https://unpkg.com/chai/chai.js"></script>
+  <script src="https://unpkg.com/mocha/mocha.js"></script>
+  <script class="mocha-init">
+    mocha.setup('bdd');
+    mocha.checkLeaks();
+  </script>
+  <script src="functions.js"></script>
+  <script src="test.js"></script>
+  <script class="mocha-exec">
+    mocha.run();
+  </script>
+</body>
+</html>
